# sidewalk-art-detector

./: README.md  pyproject.toml
sidewalk_art_detector/: transfer_learning.ipynb
src/: hello_world.py  model.py  predictor.py  train.py
