[tool.poetry]
name = "sidewalk-art-detector"
version = "0.0.1"
description = "ML model for finding heartsprojectsf images"
authors = []

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
isort = "^5.6.3"
pylint = "^2.11.1"

[tool.isort]
ensure_newline_before_comments = true
line_length = 120
force_single_line = true

[tool.black]
line-length = 120

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry_core>=1.0.0"]
